<resources>
    <string name="app_name">Clock</string>
    <string name="name">点击我编辑计划名称</string>
    <string name="description">点击我编辑计划描述</string>
    <string name="beginTime">您的计划开始于</string>
    <string name="finishTime">您的计划结束于</string>
    <string name="workTime">单次工作/学习时间</string>
    <string name="breakTime">单次休息时间</string>
    <string name="yes">确定</string>
    <string name="chooseMould">选择闹铃模式</string>
</resources>